grammar/.antlr/CWScriptParser.js
// Generated from /Users/william/t1/cwsc/grammar/CWScriptParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "CWScriptParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'contract'", "'interface'", "'import'", "'implements'", 
                     "'impl'", "'extension'", "'requires'", "'extends'", 
                     "'error'", "'event'", "'instantiate'", "'exec'", "'query'", 
                     "'migrate'", "'for'", "'in'", "'from'", "'state'", 
                     "'times'", "'if'", "'else'", "'and'", "'or'", "'true'", 
                     "'false'", "'let'", "'fail'", "'return'", "'struct'", 
                     "'enum'", "'type'", "'emit'", "'as'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'.'", "','", "'?'", "'!'", 
                     "':'", "'::'", "'$'", "'#'", "'@'", "'&'", "'->'", 
                     "'=>'", "'''", "'\"'", "'='", "'=='", "'!='", "'+'", 
                     "'+='", "'-'", "'-='", "'*'", "'*='", "'/'", "'/='", 
                     "'%'", "'%='", "'<'", "'<='", "'>'", "'>='", "'**'" ];

var symbolicNames = [ null, "CONTRACT", "INTERFACE", "IMPORT", "IMPLEMENTS", 
                      "IMPL", "EXTENSION", "REQUIRES", "EXTENDS", "ERROR", 
                      "EVENT", "INSTANTIATE", "EXEC", "QUERY", "MIGRATE", 
                      "FOR", "IN", "FROM", "STATE", "TIMES", "IF", "ELSE", 
                      "AND", "OR", "TRUE", "FALSE", "LET", "FAIL", "RETURN", 
                      "STRUCT", "ENUM", "TYPE", "EMIT", "AS", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
                      "DOT", "COMMA", "QUEST", "EXCLAM", "COLON", "D_COLON", 
                      "DOLLAR", "HASH", "AT", "AMP", "ARROW", "FAT_ARROW", 
                      "S_QUOTE", "D_QUOTE", "EQ", "EQEQ", "NEQ", "PLUS", 
                      "PLUS_EQ", "MINUS", "MINUS_EQ", "MUL", "MUL_EQ", "DIV", 
                      "DIV_EQ", "MOD", "MOD_EQ", "LT", "LT_EQ", "GT", "GT_EQ", 
                      "POW", "Ident", "StringLiteral", "IntegerLiteral", 
                      "DecimalLiteral", "CWSPEC_LINE_COMMENT", "CWSPEC_BLOCK_COMMENT", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS" ];

var ruleNames =  [ "sourceFile", "topLevelStmt", "contractDefn", "interfaceList", 
                   "interfaceVal", "interfaceDefn", "importStmt", "importSymbolList", 
                   "importSymbol", "contractBody", "interfaceBody", "contractItem", 
                   "interfaceItem", "errorDefn", "errorDefnBlock", "errorDefnBlock_item", 
                   "eventDefn", "eventDefnBlock", "eventDefnBlock_item", 
                   "stateDefn", "stateDefnBlock", "stateDefnBlock_item", 
                   "itemDefn", "mapDefn", "mapDefnKeys", "mapDefnKey", "instantiateDefn", 
                   "instantiateDecl", "execDefn", "execDefnBlock", "execDefnBlock_item", 
                   "execDecl", "execDeclBlock", "execDeclBlock_item", "queryDefn", 
                   "queryDefnBlock", "queryDefnBlock_item", "queryDecl", 
                   "queryDeclBlock", "queryDeclBlock_item", "migrateDefn", 
                   "migrateDecl", "enumVariant", "enumVariant_struct", "enumVariant_tuple", 
                   "enumVariant_unit", "tupleMembers", "parenStructMembers", 
                   "curlyStructMembers", "structMember", "typeExpr", "typeParam", 
                   "pathList", "typePath", "typeDefn", "structDefn", "enumDefn", 
                   "enumVariantList", "typeAliasDefn", "namedFnDecl", "namedFnDefn", 
                   "fnType", "fnArgs", "fnArgList", "fnArg", "fnBody", "stmt", 
                   "letStmt_", "letLHS", "expr", "val", "structVal_", "structValMembers", 
                   "structValMember", "ifExpr_", "ifClause_", "elseIfClauses", 
                   "elseClause", "forStmt_", "identList", "exprList", "namedExprList", 
                   "namedExpr", "ident", "cwspec", "reservedKeyword" ];

function CWScriptParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CWScriptParser.prototype = Object.create(antlr4.Parser.prototype);
CWScriptParser.prototype.constructor = CWScriptParser;

Object.defineProperty(CWScriptParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CWScriptParser.EOF = antlr4.Token.EOF;
CWScriptParser.CONTRACT = 1;
CWScriptParser.INTERFACE = 2;
CWScriptParser.IMPORT = 3;
CWScriptParser.IMPLEMENTS = 4;
CWScriptParser.IMPL = 5;
CWScriptParser.EXTENSION = 6;
CWScriptParser.REQUIRES = 7;
CWScriptParser.EXTENDS = 8;
CWScriptParser.ERROR = 9;
CWScriptParser.EVENT = 10;
CWScriptParser.INSTANTIATE = 11;
CWScriptParser.EXEC = 12;
CWScriptParser.QUERY = 13;
CWScriptParser.MIGRATE = 14;
CWScriptParser.FOR = 15;
CWScriptParser.IN = 16;
CWScriptParser.FROM = 17;
CWScriptParser.STATE = 18;
CWScriptParser.TIMES = 19;
CWScriptParser.IF = 20;
CWScriptParser.ELSE = 21;
CWScriptParser.AND = 22;
CWScriptParser.OR = 23;
CWScriptParser.TRUE = 24;
CWScriptParser.FALSE = 25;
CWScriptParser.LET = 26;
CWScriptParser.FAIL = 27;
CWScriptParser.RETURN = 28;
CWScriptParser.STRUCT = 29;
CWScriptParser.ENUM = 30;
CWScriptParser.TYPE = 31;
CWScriptParser.EMIT = 32;
CWScriptParser.AS = 33;
CWScriptParser.LPAREN = 34;
CWScriptParser.RPAREN = 35;
CWScriptParser.LBRACK = 36;
CWScriptParser.RBRACK = 37;
CWScriptParser.LBRACE = 38;
CWScriptParser.RBRACE = 39;
CWScriptParser.DOT = 40;
CWScriptParser.COMMA = 41;
CWScriptParser.QUEST = 42;
CWScriptParser.EXCLAM = 43;
CWScriptParser.COLON = 44;
CWScriptParser.D_COLON = 45;
CWScriptParser.DOLLAR = 46;
CWScriptParser.HASH = 47;
CWScriptParser.AT = 48;
CWScriptParser.AMP = 49;
CWScriptParser.ARROW = 50;
CWScriptParser.FAT_ARROW = 51;
CWScriptParser.S_QUOTE = 52;
CWScriptParser.D_QUOTE = 53;
CWScriptParser.EQ = 54;
CWScriptParser.EQEQ = 55;
CWScriptParser.NEQ = 56;
CWScriptParser.PLUS = 57;
CWScriptParser.PLUS_EQ = 58;
CWScriptParser.MINUS = 59;
CWScriptParser.MINUS_EQ = 60;
CWScriptParser.MUL = 61;
CWScriptParser.MUL_EQ = 62;
CWScriptParser.DIV = 63;
CWScriptParser.DIV_EQ = 64;
CWScriptParser.MOD = 65;
CWScriptParser.MOD_EQ = 66;
CWScriptParser.LT = 67;
CWScriptParser.LT_EQ = 68;
CWScriptParser.GT = 69;
CWScriptParser.GT_EQ = 70;
CWScriptParser.POW = 71;
CWScriptParser.Ident = 72;
CWScriptParser.StringLiteral = 73;
CWScriptParser.IntegerLiteral = 74;
CWScriptParser.DecimalLiteral = 75;
CWScriptParser.CWSPEC_LINE_COMMENT = 76;
CWScriptParser.CWSPEC_BLOCK_COMMENT = 77;
CWScriptParser.LINE_COMMENT = 78;
CWScriptParser.BLOCK_COMMENT = 79;
CWScriptParser.WS = 80;

CWScriptParser.RULE_sourceFile = 0;
CWScriptParser.RULE_topLevelStmt = 1;
CWScriptParser.RULE_contractDefn = 2;
CWScriptParser.RULE_interfaceList = 3;
CWScriptParser.RULE_interfaceVal = 4;
CWScriptParser.RULE_interfaceDefn = 5;
CWScriptParser.RULE_importStmt = 6;
CWScriptParser.RULE_importSymbolList = 7;
CWScriptParser.RULE_importSymbol = 8;
CWScriptParser.RULE_contractBody = 9;
CWScriptParser.RULE_interfaceBody = 10;
CWScriptParser.RULE_contractItem = 11;
CWScriptParser.RULE_interfaceItem = 12;
CWScriptParser.RULE_errorDefn = 13;
CWScriptParser.RULE_errorDefnBlock = 14;
CWScriptParser.RULE_errorDefnBlock_item = 15;
CWScriptParser.RULE_eventDefn = 16;
CWScriptParser.RULE_eventDefnBlock = 17;
CWScriptParser.RULE_eventDefnBlock_item = 18;
CWScriptParser.RULE_stateDefn = 19;
CWScriptParser.RULE_stateDefnBlock = 20;
CWScriptParser.RULE_stateDefnBlock_item = 21;
CWScriptParser.RULE_itemDefn = 22;
CWScriptParser.RULE_mapDefn = 23;
CWScriptParser.RULE_mapDefnKeys = 24;
CWScriptParser.RULE_mapDefnKey = 25;
CWScriptParser.RULE_instantiateDefn = 26;
CWScriptParser.RULE_instantiateDecl = 27;
CWScriptParser.RULE_execDefn = 28;
CWScriptParser.RULE_execDefnBlock = 29;
CWScriptParser.RULE_execDefnBlock_item = 30;
CWScriptParser.RULE_execDecl = 31;
CWScriptParser.RULE_execDeclBlock = 32;
CWScriptParser.RULE_execDeclBlock_item = 33;
CWScriptParser.RULE_queryDefn = 34;
CWScriptParser.RULE_queryDefnBlock = 35;
CWScriptParser.RULE_queryDefnBlock_item = 36;
CWScriptParser.RULE_queryDecl = 37;
CWScriptParser.RULE_queryDeclBlock = 38;
CWScriptParser.RULE_queryDeclBlock_item = 39;
CWScriptParser.RULE_migrateDefn = 40;
CWScriptParser.RULE_migrateDecl = 41;
CWScriptParser.RULE_enumVariant = 42;
CWScriptParser.RULE_enumVariant_struct = 43;
CWScriptParser.RULE_enumVariant_tuple = 44;
CWScriptParser.RULE_enumVariant_unit = 45;
CWScriptParser.RULE_tupleMembers = 46;
CWScriptParser.RULE_parenStructMembers = 47;
CWScriptParser.RULE_curlyStructMembers = 48;
CWScriptParser.RULE_structMember = 49;
CWScriptParser.RULE_typeExpr = 50;
CWScriptParser.RULE_typeParam = 51;
CWScriptParser.RULE_pathList = 52;
CWScriptParser.RULE_typePath = 53;
CWScriptParser.RULE_typeDefn = 54;
CWScriptParser.RULE_structDefn = 55;
CWScriptParser.RULE_enumDefn = 56;
CWScriptParser.RULE_enumVariantList = 57;
CWScriptParser.RULE_typeAliasDefn = 58;
CWScriptParser.RULE_namedFnDecl = 59;
CWScriptParser.RULE_namedFnDefn = 60;
CWScriptParser.RULE_fnType = 61;
CWScriptParser.RULE_fnArgs = 62;
CWScriptParser.RULE_fnArgList = 63;
CWScriptParser.RULE_fnArg = 64;
CWScriptParser.RULE_fnBody = 65;
CWScriptParser.RULE_stmt = 66;
CWScriptParser.RULE_letStmt_ = 67;
CWScriptParser.RULE_letLHS = 68;
CWScriptParser.RULE_expr = 69;
CWScriptParser.RULE_val = 70;
CWScriptParser.RULE_structVal_ = 71;
CWScriptParser.RULE_structValMembers = 72;
CWScriptParser.RULE_structValMember = 73;
CWScriptParser.RULE_ifExpr_ = 74;
CWScriptParser.RULE_ifClause_ = 75;
CWScriptParser.RULE_elseIfClauses = 76;
CWScriptParser.RULE_elseClause = 77;
CWScriptParser.RULE_forStmt_ = 78;
CWScriptParser.RULE_identList = 79;
CWScriptParser.RULE_exprList = 80;
CWScriptParser.RULE_namedExprList = 81;
CWScriptParser.RULE_namedExpr = 82;
CWScriptParser.RULE_ident = 83;
CWScriptParser.RULE_cwspec = 84;
CWScriptParser.RULE_reservedKeyword = 85;


function SourceFileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CWScriptParser.RULE_sourceFile;
    this.spec = null; // CwspecContext
    return this;
}

SourceFileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceFileContext.prototype.constructor = SourceFileContext;

SourceFileContext.prototype.EOF = function() {
    return this.getToken(CWScriptParser.EOF, 0);
};

SourceFileContext.prototype.topLevelStmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TopLevelStmtContext);
    } else {
        return this.getTypedRuleContext(TopLevelStmtContext,i);
    }
};

SourceFileContext.prototype.cwspec = function() {
    return this.getTypedRuleContext(CwspecContext,0);
};




CWScriptParser.SourceFileContext = SourceFileContext;

CWScriptParser.prototype.sourceFile = function() {

    var localctx = new SourceFileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CWScriptParser.RULE_sourceFile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 173;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        if(la_===1) {
            this.state = 172;
            localctx.spec = this.cwspec();

        }
        this.state = 178;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CWScriptParser.CONTRACT) | (1 << CWScriptParser.INTERFACE) | (1 << CWScriptParser.IMPORT))) !== 0) || _la===CWScriptParser.CWSPEC_LINE_COMMENT || _la===CWScriptParser.CWSPEC_BLOCK_COMMENT) {
            this.state = 175;
            this.topLevelStmt();
            this.state = 180;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 181;
        this.match(CWScriptParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TopLevelStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CWScriptParser.RULE_topLevelStmt;
    return this;
}

TopLevelStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TopLevelStmtContext.prototype.constructor = TopLevelStmtContext;

TopLevelStmtContext.prototype.contractDefn = function() {
    return this.getTypedRuleContext(ContractDefnContext,0);
};

TopLevelStmtContext.prototype.interfaceDefn = function() {
    return this.getTypedRuleContext(InterfaceDefnContext,0);
};

TopLevelStmtContext.prototype.importStmt = function() {
    return this.getTypedRuleContext(ImportStmtContext,0);
};




CWScriptParser.TopLevelStmtContext = TopLevelStmtContext;

CWScriptParser.prototype.topLevelStmt = function() {

    var localctx = new TopLevelStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CWScriptParser.RULE_topLevelStmt);
    try {
        this.state = 186;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 183;
            this.contractDefn();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 184;
            this.interfaceDefn();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 185;
            this.importStmt();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ContractDefnContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CWScriptParser.RULE_contractDefn;
    this.spec = null; // CwspecContext
    this.name = null; // IdentContext
    this.parents = null; // IdentListContext
    this.interfaces = null; // InterfaceListContext
    return this;
}

ContractDefnContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ContractDefnContext.prototype.constructor = ContractDefnContext;

ContractDefnContext.prototype.CONTRACT = function() {
    return this.getToken(CWScriptParser.CONTRACT, 0);
};

ContractDefnContext.prototype.contractBody = function() {
    return this.getTypedRuleContext(ContractBodyContext,0);
};

ContractDefnContext.prototype.ident = function() {
    return this.getTypedRuleContext(IdentContext,0);
};

ContractDefnContext.prototype.EXTENDS = function() {
    return this.getToken(CWScriptParser.EXTENDS, 0);
};

ContractDefnContext.prototype.IMPLEMENTS = function() {
    return this.getToken(CWScriptParser.IMPLEMENTS, 0);
};

ContractDefnContext.prototype.cwspec = function() {
    return this.getTypedRuleContext(CwspecContext,0);
};

ContractDefnContext.prototype.identList = function() {
    return this.getTypedRuleContext(IdentListContext,0);
};

ContractDefnContext.prototype.interfaceList = function() {
    return this.getTypedRuleContext(InterfaceListContext,0);
};




CWScriptParser.ContractDefnContext = ContractDefnContext;

CWScriptParser.prototype.contractDefn = function() {

    var localctx = new ContractDefnContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CWScriptParser.RULE_contractDefn);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 189;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CWScriptParser.CWSPEC_LINE_COMMENT || _la===CWScriptParser.CWSPEC_BLOCK_COMMENT) {
            this.state = 188;
            localctx.spec = this.cwspec();
        }

        this.state = 191;
        this.match(CWScriptParser.CONTRACT);

        this.state = 192;
        localctx.name = this.ident();
        this.state = 195;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CWScriptParser.EXTENDS) {
            this.state = 193;
            this.match(CWScriptParser.EXTENDS);
            this.state = 194;
            localctx.parents = this.identList();
        }

        this.state = 199;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CWScriptParser.IMPLEMENTS) {
            this.state = 197;
            this.match(CWScriptParser.IMPLEMENTS);

            this.state = 198;
            localctx.interfaces = this.interfaceList();
        }

        this.state = 201;
        this.contractBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InterfaceListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CWScriptParser.RULE_interfaceList;
    return this;
}

InterfaceListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterfaceListContext.prototype.constructor = InterfaceListContext;

InterfaceListContext.prototype.interfaceVal = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InterfaceValContext);
    } else {
        return this.getTypedRuleContext(InterfaceValContext,i);
    }
};

InterfaceListContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(CWScriptParser.COMMA);
    } else {
        return this.getToken(CWScriptParser.COMMA, i);
    }
};





CWScriptParser.InterfaceListContext = InterfaceListContext;

CWScriptParser.prototype.interfaceList = function() {

    var localctx = new InterfaceListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CWScriptParser.RULE_interfaceList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 203;
        this.interfaceVal();
        this.state = 208;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CWScriptParser.COMMA) {
            this.state = 204;
            this.match(CWScriptParser.COMMA);
            this.state = 205;
            this.interfaceVal();
            this.state = 210;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InterfaceValContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CWScriptParser.RULE_interfaceVal;
    this.interfaceName = null; // IdentContext
    this.mixins = null; // IdentListContext
    return this;
}

InterfaceValContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterfaceValContext.prototype.constructor = InterfaceValContext;

InterfaceValContext.prototype.ident = function() {
    return this.getTypedRuleContext(IdentContext,0);
};
